# plica-web/src/router/index.ts
@@ -6,9 +6,10 @@ import Layout from '@/layout/index.vue'
 
 /* Router modules */
 import componentsRouter from './modules/components'
-import chartsRouter from './modules/charts'
 import tableRouter from './modules/table'
 import nestedRouter from './modules/nested'
+import { getPages } from '@/api/pages'
+import { PermissionModule } from '@/store/modules/permission'
 
 Vue.use(Router)
 
@@ -40,6 +41,7 @@ Vue.use(Router)
   a base page that does not have permission requirements
   all roles can be accessed
 */
+
 export const constantRoutes: RouteConfig[] = [
   {
     path: '/redirect',
@@ -86,413 +88,19 @@ export const constantRoutes: RouteConfig[] = [
           icon: 'dashboard',
           affix: true
         }
-      }
-    ]
-  },
-  {
-    path: '/',
-    component: Layout,
-    redirect: '/dashboard',
-    children: [
+      },
       {
-        path: 'dashboard',
+        path: '/dashboard/*',
         component: () => import(/* webpackChunkName: "dashboard" */ '@/views/dashboard/index.vue'),
-        name: 'test',
+        name: 'DetailBoard',
         meta: {
-          title: 'test',
-          icon: 'dashboard',
-          affix: true
+          title: 'DetailBoard',
+          hidden: true,
+          breadcrumb: false,
+          alwaysShow: false
         }
-      }
+      },
     ]
-  },
-  {
-    path: '/',
-    component: Layout,
-    redirect: '/dashboard',
-    children: [
-      {
-        path: 'dashboard',
-        component: () => import(/* webpackChunkName: "dashboard" */ '@/views/dashboard/index.vue'),
-        name: 'Dashboard',
-        meta: {
-          title: 'test1',
-          icon: 'dashboard',
-          affix: true
-        }
-      }
-    ]
-  },
-  {
-    path: '/',
-    component: Layout,
-    redirect: '/dashboard',
-    children: [
-      {
-        path: 'dashboard',
-        component: () => import(/* webpackChunkName: "dashboard" */ '@/views/dashboard/index.vue'),
-        name: 'Dashboard',
-        meta: {
-          title: 'test2',
-          icon: 'dashboard',
-          affix: true
-        }
-      }
-    ]
-  },
-  // {
-  //   path: '/documentation',
-  //   component: Layout,
-  //   children: [
-  //     {
-  //       path: 'index',
-  //       component: () => import(/* webpackChunkName: "documentation" */ '@/views/documentation/index.vue'),
-  //       name: 'Documentation',
-  //       meta: { title: 'documentation', icon: 'documentation', affix: true }
-  //     }
-  //   ]
-  // },
-  // {
-  //   path: '/guide',
-  //   component: Layout,
-  //   redirect: '/guide/index',
-  //   children: [
-  //     {
-  //       path: 'index',
-  //       component: () => import(/* webpackChunkName: "guide" */ '@/views/guide/index.vue'),
-  //       name: 'Guide',
-  //       meta: {
-  //         title: 'guide',
-  //         icon: 'guide',
-  //         noCache: true
-  //       }
-  //     }
-  //   ]
-  // },
-  // {
-  //   path: '/profile',
-  //   component: Layout,
-  //   redirect: '/profile/index',
-  //   meta: { hidden: true },
-  //   children: [
-  //     {
-  //       path: 'index',
-  //       component: () => import(/* webpackChunkName: "profile" */ '@/views/profile/index.vue'),
-  //       name: 'Profile',
-  //       meta: {
-  //         title: 'profile',
-  //         icon: 'user',
-  //         noCache: true
-  //       }
-  //     }
-  //   ]
-  // }
-]
-
-/**
- * asyncRoutes
- * the routes that need to be dynamically loaded based on user roles
-*/
-export const asyncRoutes: RouteConfig[] = [
-  // {
-  //   path: '/permission',
-  //   component: Layout,
-  //   redirect: '/permission/directive',
-  //   meta: {
-  //     title: 'permission',
-  //     icon: 'lock',
-  //     roles: ['admin', 'editor'], // you can set roles in root nav
-  //     alwaysShow: true // will always show the root menu
-  //   },
-  //   children: [
-  //     {
-  //       path: 'page',
-  //       component: () => import(/* webpackChunkName: "permission-page" */ '@/views/permission/page.vue'),
-  //       name: 'PagePermission',
-  //       meta: {
-  //         title: 'pagePermission',
-  //         roles: ['admin'] // or you can only set roles in sub nav
-  //       }
-  //     },
-  //     {
-  //       path: 'directive',
-  //       component: () => import(/* webpackChunkName: "permission-directive" */ '@/views/permission/directive.vue'),
-  //       name: 'DirectivePermission',
-  //       meta: {
-  //         title: 'directivePermission'
-  //         // if do not set roles, means: this page does not require permission
-  //       }
-  //     },
-  //     {
-  //       path: 'role',
-  //       component: () => import(/* webpackChunkName: "permission-role" */ '@/views/permission/role.vue'),
-  //       name: 'RolePermission',
-  //       meta: {
-  //         title: 'rolePermission',
-  //         roles: ['admin']
-  //       }
-  //     }
-  //   ]
-  // },
-  {
-    path: '/icon',
-    component: Layout,
-    children: [
-      {
-        path: 'index',
-        component: () => import(/* webpackChunkName: "icons" */ '@/views/icons/index.vue'),
-        name: 'Icons',
-        meta: {
-          title: 'icons',
-          icon: 'icon',
-          noCache: true
-        }
-      }
-    ]
-  },
-  /** when your routing map is too long, you can split it into small modules **/
-  //componentsRouter,
-  //chartsRouter,
-  //nestedRouter,
-  tableRouter,
-  // {
-  //   path: '/example',
-  //   component: Layout,
-  //   redirect: '/example/list',
-  //   meta: {
-  //     title: 'example',
-  //     icon: 'example'
-  //   },
-  //   children: [
-  //     {
-  //       path: 'create',
-  //       component: () => import(/* webpackChunkName: "example-create" */ '@/views/example/create.vue'),
-  //       name: 'CreateArticle',
-  //       meta: {
-  //         title: 'createArticle',
-  //         icon: 'edit'
-  //       }
-  //     },
-  //     {
-  //       path: 'edit/:id(\\d+)',
-  //       component: () => import(/* webpackChunkName: "example-edit" */ '@/views/example/edit.vue'),
-  //       name: 'EditArticle',
-  //       meta: {
-  //         title: 'editArticle',
-  //         noCache: true,
-  //         activeMenu: '/example/list',
-  //         hidden: true
-  //       }
-  //     },
-  //     {
-  //       path: 'list',
-  //       component: () => import(/* webpackChunkName: "example-list" */ '@/views/example/list.vue'),
-  //       name: 'ArticleList',
-  //       meta: {
-  //         title: 'articleList',
-  //         icon: 'list'
-  //       }
-  //     }
-  //   ]
-  // },
-  // {
-  //   path: '/tab',
-  //   component: Layout,
-  //   children: [
-  //     {
-  //       path: 'index',
-  //       component: () => import(/* webpackChunkName: "tab" */ '@/views/tab/index.vue'),
-  //       name: 'Tab',
-  //       meta: {
-  //         title: 'tab',
-  //         icon: 'tab'
-  //       }
-  //     }
-  //   ]
-  // },
-  // {
-  //   path: '/error',
-  //   component: Layout,
-  //   redirect: 'noredirect',
-  //   meta: {
-  //     title: 'errorPages',
-  //     icon: '404'
-  //   },
-  //   children: [
-  //     {
-  //       path: '401',
-  //       component: () => import(/* webpackChunkName: "error-page-401" */ '@/views/error-page/401.vue'),
-  //       name: 'Page401',
-  //       meta: {
-  //         title: 'page401',
-  //         noCache: true
-  //       }
-  //     },
-  //     {
-  //       path: '404',
-  //       component: () => import(/* webpackChunkName: "error-page-404" */ '@/views/error-page/404.vue'),
-  //       name: 'Page404',
-  //       meta: {
-  //         title: 'page404',
-  //         noCache: true
-  //       }
-  //     }
-  //   ]
-  // },
-  // {
-  //   path: '/error-log',
-  //   component: Layout,
-  //   redirect: 'noredirect',
-  //   children: [
-  //     {
-  //       path: 'log',
-  //       component: () => import(/* webpackChunkName: "error-log" */ '@/views/error-log/index.vue'),
-  //       name: 'ErrorLog',
-  //       meta: {
-  //         title: 'errorLog',
-  //         icon: 'bug'
-  //       }
-  //     }
-  //   ]
-  // },
-  // {
-  //   path: '/excel',
-  //   component: Layout,
-  //   redirect: '/excel/export-excel',
-  //   meta: {
-  //     title: 'excel',
-  //     icon: 'excel'
-  //   },
-  //   children: [
-  //     {
-  //       path: 'export-excel',
-  //       component: () => import(/* webpackChunkName: "export-excel" */ '@/views/excel/export-excel.vue'),
-  //       name: 'ExportExcel',
-  //       meta: { title: 'exportExcel' }
-  //     },
-  //     {
-  //       path: 'export-selected-excel',
-  //       component: () => import(/* webpackChunkName: "select-excel" */ '@/views/excel/select-excel.vue'),
-  //       name: 'SelectExcel',
-  //       meta: { title: 'selectExcel' }
-  //     },
-  //     {
-  //       path: 'export-merge-header',
-  //       component: () => import(/* webpackChunkName: "merge-header" */ '@/views/excel/merge-header.vue'),
-  //       name: 'MergeHeader',
-  //       meta: { title: 'mergeHeader' }
-  //     },
-  //     {
-  //       path: 'upload-excel',
-  //       component: () => import(/* webpackChunkName: "upload-excel" */ '@/views/excel/upload-excel.vue'),
-  //       name: 'UploadExcel',
-  //       meta: { title: 'uploadExcel' }
-  //     }
-  //   ]
-  // },
-  // {
-  //   path: '/zip',
-  //   component: Layout,
-  //   redirect: '/zip/download',
-  //   meta: {
-  //     title: 'zip',
-  //     icon: 'zip',
-  //     alwaysShow: true // will always show the root menu
-  //   },
-  //   children: [
-  //     {
-  //       path: 'download',
-  //       component: () => import(/* webpackChunkName: "zip" */ '@/views/zip/index.vue'),
-  //       name: 'ExportZip',
-  //       meta: { title: 'exportZip' }
-  //     }
-  //   ]
-  // },
-  // {
-  //   path: '/pdf',
-  //   component: Layout,
-  //   redirect: '/pdf/index',
-  //   children: [
-  //     {
-  //       path: 'index',
-  //       component: () => import(/* webpackChunkName: "pdf" */ '@/views/pdf/index.vue'),
-  //       name: 'PDF',
-  //       meta: {
-  //         title: 'pdf',
-  //         icon: 'pdf'
-  //       }
-  //     }
-  //   ]
-  // },
-  // {
-  //   path: '/pdf-download-example',
-  //   component: () => import(/* webpackChunkName: "pdf-download-example" */ '@/views/pdf/download.vue'),
-  //   meta: { hidden: true }
-  // },
-  // {
-  //   path: '/theme',
-  //   component: Layout,
-  //   redirect: 'noredirect',
-  //   children: [
-  //     {
-  //       path: 'index',
-  //       component: () => import(/* webpackChunkName: "theme" */ '@/views/theme/index.vue'),
-  //       name: 'Theme',
-  //       meta: {
-  //         title: 'theme',
-  //         icon: 'theme'
-  //       }
-  //     }
-  //   ]
-  // },
-  // {
-  //   path: '/clipboard',
-  //   component: Layout,
-  //   redirect: 'noredirect',
-  //   children: [
-  //     {
-  //       path: 'index',
-  //       component: () => import(/* webpackChunkName: "clipboard" */ '@/views/clipboard/index.vue'),
-  //       name: 'Clipboard',
-  //       meta: {
-  //         title: 'clipboard',
-  //         icon: 'clipboard'
-  //       }
-  //     }
-  //   ]
-  // },
-  {
-    path: '/i18n',
-    component: Layout,
-    children: [
-      {
-        path: 'index',
-        component: () => import(/* webpackChunkName: "i18n-demo" */ '@/views/i18n-demo/index.vue'),
-        name: 'I18n',
-        meta: {
-          title: 'i18n',
-          icon: 'international'
-        }
-      }
-    ]
-  },
-  {
-    path: 'external-link',
-    component: Layout,
-    children: [
-      {
-        path: 'https://github.com/Armour/vue-typescript-admin-template',
-        meta: {
-          title: 'externalLink',
-          icon: 'link'
-        }
-      }
-    ]
-  },
-  {
-    path: '*',
-    redirect: '/404',
-    meta: { hidden: true }
   },
   {
     path: '*',
@@ -501,8 +109,25 @@ export const asyncRoutes: RouteConfig[] = [
   }
 ]
 
+/**
+ * asyncRoutes
+ * the routes that need to be dynamically loaded based on user roles
+*/
+
+export const asyncRoutes: RouteConfig[] = []
+let pageData: any = getPages().then(response => {
+  return response.data.items.forEach(function(value: RouteConfig) {
+    let page: RouteConfig = {
+      name: value.name,
+      path: value.path,
+      meta: value.meta
+    }
+    asyncRoutes.push(page)
+  })
+})
+
 const createRouter = () => new Router({
-  // mode: 'history',  // Disabled due to Github Pages doesn't support this, enable this if you need.
+  mode: 'history',
   scrollBehavior: (to, from, savedPosition) => {
     if (savedPosition) {
       return savedPosition
